# massist

./: .dockerignore  .env.sample  .gitignore  .pylintrc  .uv-completions-bashrc  Dockerfile  README.md  agentic_rag_agent_ui.py  agno_scraper.py  bot.py  build_vectordb.py  cli.py  config.py  env.sample  interaction_using_gemini_free.py  interaction_using_openai.py  logger.py  main.py  massist copy.py  massist.py  playground.py  pyproject.toml  requirements.txt  requirements312.txt  scraper.py  serve.py  settings.py  vectorize.py  web_search.py
.api/: team.http  vllm.http
.github/: copilot-commit-message-instructions.md  copilot-instructions.md
.github/workflows/: docker-images.yml  docker-publish.yml  docker_publish.yml  issue_autoclose.yml  validate.yml
api/: router.py
bot/: tg.py
cli/: vectorize.py
db/: redis.py
filters/: chat_type.py  has_usernames.py
handlers/: root.py  usernames.py
llmx/: agent.py  agent_memory.py  agent_teams.py  agents.py  api.py  chunking.py  descriptions.py  knowledge.py  logger.py  memory.py  memory_db.py  meta.py  models.py  routes.py  storage.py  team.py  team_lead.py  team_memory.py  vector_db.py  vectordb.py
mai/: agent.py  agent_memory.py  auth.py  chunking.py  knowledge.py  logger.py  meta.py  redis.py  router.py  team.py  team_lead.py  team_memory.py  vector_db.py
massist/: agent.py  agent_memory.py  auth.py  chunking.py  config.py  helpers.py  json_serializers.py  knowledge.py  logger.py  memory.py  meta.py  models.py  redis.py  router.py  routes.py  storage.py  team.py  team_lead.py  team_memory.py  vector_db.py
(+4 files in other folders)
