[project]
name = "massist"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "agno",
    "aiogram>=3.19.0",
    "async-timeout>=5.0.1",
    "bs4>=0.0.2",
    "chonkie>=1.0.2",
    "duckduckgo-search>=7.5.5",
    "fastapi>=0.115.12",
    "google-genai>=1.8.0",
    "huggingface-hub>=0.29.3",
    "jinja2>=3.1.6",
    "lancedb>=0.21.2",
    "lxml>=5.3.1",
    "mypy>=1.15.0",
    "ollama>=0.4.7",
    "openai>=1.69.0",
    "pandas>=2.2.3",
    "pgvector>=0.4.0",
    "pip>=25.0.1",
    "psycopg[binary]>=3.2.6",
    "pymongo>=4.11.3",
    "redis>=5.2.1",
    "ruff>=0.11.2",
    "sqlalchemy>=2.0.40",
    "sse-starlette>=2.2.1",
    "tiktoken>=0.9.0",
    "types-ujson>=5.10.0.20250326",
    "ujson>=5.10.0",
    "uvicorn[standard]>=0.34.0",
    "uvloop>=0.21.0",
    "valkey>=6.1.0",
]

[tool.uv.sources]
agno = { git = "https://github.com/stolyarchuk/agno.git", subdirectory = "libs/agno", rev = "devel" }
